# backend-fastapi-high-performance-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  index.html  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: cache_demo.py  proxy.py
app/core/: config.py  logging.py
app/middleware/: context.py  rate_limit.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
