[tool.poetry]
name = "backend-fastapi-high-performance-gateway"
version = "0.1.0"
description = "High-performance API Gateway built with FastAPI"
authors = ["Shivay Singh <shivaysinghrajputofficial@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
httpx = "^0.26.0"
gunicorn = "^21.2.0"
orjson = "^3.9.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
